[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bellwether"
version = "0.1.0"
description = "Supplier risk counter-intel agent — Bright Data + AMD MI300X + Granite + CrewAI + Perplexity Comet"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "pydantic>=2.6",
  "crewai>=0.30",
  "langchain>=0.2",
  "openai>=1.30",
  "typer>=0.12",
  "rich>=13.7",
]

[project.scripts]
bellwether = "bellwether.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
